# jakube

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE
cpp/: .clang-format  CMakeLists.txt
cpp/src/: CMakeLists.txt  jakubelib.h  kissrandom.h  mman.h
cpp/test/: CMakeLists.txt  test_main.cpp
python/: CMakeLists.txt  MANIFEST.in  dev-requirements.txt  test-requirements.txt  tox.ini  typenames.h
python/src/: README.md  bindings.cpp  pyproject.toml
python/src/jakube/: __init__.py
python/tests/: accuracy_test.py  adversarial_test.py  angular_index_test.py  conftest.py  dot_index_test.py  euclidean_index_test.py  examples_test.py  hamming_index_test.py  holes_test.py  index_test.py  manhattan_index_test.py  memory_leak_test.py  multithreaded_build_test.py  on_disk_build_test.py  property_tests.py  seed_test.py  test_accuracy.py  test_angularIndex.py  test_dotIndex.py  test_euclidianIndex.py  test_hammingIndex.py  test_holes.py  test_index.py  test_manhattanDistance.py  test_memoryLeak.py  test_multiThreadBuild.py  test_multiThreading.py  test_onDiskBuild.py  test_seed.py  test_types.py  threading_test.py  types_test.py
